[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tungstenite = "0.18.0"
url = "2.3.1"
uuid = { version = "1.2.2", features = ["v4", "v8"] }
